welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:17: error: not found: value poserBiscuit
	poserBiscuit()
        ^